# TradeBridge

./: .bg_indicator.pid  .body.json  .bridge_gateway.pid  .bridge_gateway_9020.pid  .bridge_gateway_9121.pid  .dockerignore  .env.example  .gitignore  .mcp_server.pid  .mcp_server_9010.pid  .mcp_server_9131.pid  .oh-my-opencode-pi-stats.json  .oh-my-opencode-pi-workflow.json  .pi-session-memory.md  .test_bars.json  .test_bars2.json  .test_bars_final.json  .test_bars_jsonbody.json  .test_get_account.json  .test_get_positions.json  .test_indicator_macd.json  .test_modify_order.json  .test_order_book_new.json  .test_screenshot.json  .test_submit_order.json  .test_ticks_new.json  Dockerfile.autonomous  EA_COMPILATION_FIX.md  MCP_TOOL_USAGE_REPORT.md  PLAN.md  README.md  RND_ANALYSIS_ENGINE.md  ROADMAP.md  SYMBOL_SUFFIX_FIX.md  pyproject.toml  run_mcp.sh  setup_xauusd_trading.sh  start_http.sh  ystemctl start mt5-mcp-server
apps/: __init__.py
deploy/: Dockerfile  README.md  docker-compose.full.yml  docker-compose.test.yml  docker-compose.yml
docs/: INTEGRATION_AUDIT_20260409.md  UPGRADE_MANDATE_20260408.md  UPGRADE_PLAN_20260408.md  adr-002-latency-optimization.md  adr-003-ownership-and-idempotency-contract.md  audit-trading-agent-stop-20260409.md  audit-trading-system-2026-04-04.md  comprehensive_audit_report_20260409.md  comprehensive_audit_report_20260409_pass2.md  fix_report_20260409.md  proposal-vibe-trading-tool-cleanup.md  trading_audit_report.md  waiting_tools_bug_report.md  waiting_tools_migration_plan.md
ea/: BracketManager.mqh  BridgeConnectorEA.mq5  (+2 more)
(+184 files in other folders)
