[tool.poetry]
name = "TradeBridge"
version = "0.1.0"
description = "MetaTrader 5 ↔ MCP bridge (scaffold)"
authors = ["TradeBridge R&D <devnull@example.com>"]
readme = "README.md"
packages = [{ include = "mt5_mcp", from = "src" }, { include = "apps" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = "^0.115.12"
uvicorn = { version = "^0.27.0", extras = ["standard"] }
pydantic = "^2.6.0"
typing-extensions = "^4.9.0"
redis = "^5.0.0"
psycopg-binary = "^3.1.18"
structlog = "^24.1.0"
httpx = "^0.28.1"
MetaTrader5 = { version = "^5.0.45", optional = true }
prometheus-client = "^0.20.0"
uvloop = { version = "^0.21.0", markers = "sys_platform != 'win32'" }
mcp = "^1.0.0"
feedparser = "^6.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.3.0"
black = "^24.2.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
mt5 = ["MetaTrader5"]
ml = ["onnxruntime"]

[tool.poetry.group.ml.dependencies]
onnxruntime = "^1.17.0"
